Adicionar novos endpoints swagger
