# app/Http/Controllers/Controller.php
@@ -6,10 +6,26 @@ use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
 use Illuminate\Foundation\Bus\DispatchesJobs;
 use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
+
 /**
- * @OA\Info(title="My First API", version="0.1")
+ * @OA\Info(
+ *  title="Test API",
+ *  version="0.1"
+ * )
+ *
+ * @OA\Server(
+ *      url="http://127.0.0.1:8000/api/",
+ *      description="Test API Server"
+ * )
+ *
+ * @OA\Tag(
+ *     name="Projects",
+ *     description="API Endpoints of Projects"
+ * )
  */
 class Controller extends BaseController
 {
-    use AuthorizesRequests, DispatchesJobs, ValidatesRequests;
+    use AuthorizesRequests;
+    use DispatchesJobs;
+    use ValidatesRequests;
 }
